substrate/primitives/api/test/tests/ui/changed_in_unknown_version.stderr
error: `changed_in` version can not be greater than the `api_version`
  --> tests/ui/changed_in_unknown_version.rs:25:3
   |
25 |         fn test(data: u64);
   |         ^^
